--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.8.1",
+    "redis": "^4.7.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
